# Precise-NeRF

./: README.md
NGP_related/: run_all_blender.sh  run_all_blender_seg.sh
NGP_related/examples/: train_ngp_nerf_occ.py  train_segngp_nerf_occ.py  utils.py
NGP_related/examples/datasets/: nerf_360_v2.py  nerf_synthetic.py
NGP_related/examples/pycolmap/pycolmap/: scene_manager.py
NGP_related/examples/radiance_fields/: ngp_segment.py  ngp_torch.py
NGP_related/logs_txt/blender/seg/: chair_output_seg.txt  drums_output_seg.txt  ficus_output_seg.txt  hotdog_output_seg.txt  lego_output_seg.txt  materials_output_seg.txt  mic_output_seg.txt  ship_output_seg.txt
NGP_related/nerfacc/: volrend.py  volrend_expansion.py
NGP_related/nerfacc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NGP_related/nerfacc/estimators/: occ_grid.py  prop_net.py
NeRF_related/SegNerf/: pyproject.toml
NeRF_related/SegNerf/segnerf/: segnerf_config.py  segnerf_field.py  segnerf_model.py
NeRF_related/SegNerf/segnerf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
NeRF_related/nerfstudio/: pyproject.toml
NeRF_related/nerfstudio/nerfstudio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PyNeRF_related/: convert_blender_data.py
PyNeRF_related/PrecPyNeRF/: environment.yml  run_all_360v2_seg.sh  run_all_blender_seg.sh
PyNeRF_related/PrecPyNeRF/pynerf.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PyNeRF_related/PyNeRF/: read_json.py  run_all_360v2_vanilla.sh  run_all_blender_vanilla.sh
PyNeRF_related/PyNeRF/pynerf.egg-info/: PKG-INFO
(+181 files in other folders)
